Repair and customize algo